--- a/Pagina_login/style.css
+++ b/Pagina_login/style.css
@@ -116,43 +116,9 @@ button:hover{
 
 
 footer {
-    background-color: rgb(87, 87, 88);
-    width: 100%;
-    box-sizing: border-box;
-    padding: 10px 100px 0px 100px;
-  }
-  
-  .footer_content {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 0 20px;
-  }
-  .contact h3{
-    color: antiquewhite;
-    margin-bottom: 40px;
-  }
-  .contact a{
-    display: flex;
-    flex-direction: column;
-    color: rgb(219, 216, 216);
-    text-decoration: none;
-    height: 50px;
-  }
-  
-  .map_company {
-    width: 200px;
-    height: auto;
-    border: 0;
-  }
-  .map_text{
-    color: antiquewhite;
-    padding-bottom: 0;
-  }
-  
-  /* nova classe pro parágrafo ficar centralizado e separado */
+    background-color: rgba(87, 87, 88, 0.021);
+}
   .footer_copy {
     text-align: center;
-    padding: 5px 0;
     color: white;
   }
